# pycipher

./: .gitignore  MANIFEST.in  compile-win-conda.bat  compile-win.bat  gui.spec  gui_win.spec  gui_win_portable.spec  pyproject.toml  readme.md  todo.md
cipher/: __init__.py  cipher.py  cli.py  gui.py
docs/: Build.md
