[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cipher"
dynamic = ["version"]
description = "A simple encryption/decryption tool"
authors = [{ name = "sean1832" }]
license = { text = "MIT" }
dependencies = ["cryptography", "pyqt6", "argon2-cffi"]


[project.scripts]
cipher = "cipher.cli:main"
cipher-gui = "cipher.gui:main"

[tool.setuptools.dynamic]
version = { attr = "cipher.__version__" }

[tool.setuptools]
packages = ["cipher"] # Explicitly specify the package
